--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watch</title>
+    <title>Massengers</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@300;400;700&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
                 
                 <div class="buy-wrapper">
                     <a href="/" class="buy-link">Download</a>
-                    <div class="price">14,99$</div>
+                    <div class="price">0$</div>
                 </div>     
             </div>
             <div class="header-img-wrapper">
