--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="product-description-wrapper">
             <p class="product-description-title">Other</p>
-            <p class="product-description"> Достаточно иметь под рукой ноутбук, телефон или планшет. С этих устройств можно отправлять документы, файлы и сообщения без использования платных СМС, а также совершать звонки. Это стало возможным вместе с появлением <a class="product-description-link" href="/">мессенджеров.</a></p>
+            <p class="product-description"> Достаточно иметь под рукой ноутбук, телефон или планшет. С этих устройств можно отправлять документы, файлы и сообщения без использования платных СМС, а также совершать звонки. Это стало возможным вместе с появлением <a class="product-description-link" href="#">мессенджеров.</a></p>
         </div>
 
     </main>
