--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="header-description">Он позволяет пользователям отправлять сообщения, совершать голосовые и видеозвонки, обмениваться изображениями, документами, местоположением пользователя и другим контентом.</p>
                 
                 <div class="buy-wrapper">
-                    <a href="/" class="buy-link">Download</a>
+                    <a href="#" class="buy-link">Download</a>
                     <div class="price">0$</div>
                 </div>     
             </div>
