--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="header-description">Он позволяет пользователям отправлять сообщения, совершать голосовые и видеозвонки, обмениваться изображениями, документами, местоположением пользователя и другим контентом.</p>
                 
                 <div class="buy-wrapper">
-                    <a href="#" class="buy-link">Download</a>
+                    <a href="index.html" class="buy-link">Download</a>
                     <div class="price">0$</div>
                 </div>     
             </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="product-description-wrapper">
             <p class="product-description-title">Other</p>
-            <p class="product-description"> Достаточно иметь под рукой ноутбук, телефон или планшет. С этих устройств можно отправлять документы, файлы и сообщения без использования платных СМС, а также совершать звонки. Это стало возможным вместе с появлением <a class="product-description-link" href="#">мессенджеров.</a></p>
+            <p class="product-description"> Достаточно иметь под рукой ноутбук, телефон или планшет. С этих устройств можно отправлять документы, файлы и сообщения без использования платных СМС, а также совершать звонки. Это стало возможным вместе с появлением <a class="product-description-link" href="index.html">мессенджеров.</a></p>
         </div>
 
     </main>
